# emb_lib

./: .editorconfig  .gitignore  .psw  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  README.md  list.c  list.h  main  main.c
app/: CMakeLists.txt  main.c
examples/: ATOMICS_COMPARISON.md  CMakeLists_threadsafe.txt  THREAD_SAFETY_GUIDE.md  atomic_implementation.c  test_atomic_implementation.cpp  test_thread_safety.cpp  thread_safe_implementation.c  thread_safe_version.h
modules/: CMakeLists.txt  string_builder.c  string_builder.h
src/: CMakeLists.txt  circ_buffer.c  circ_buffer.h  emblib_circ_buffer.c  emblib_circ_buffer.h  emblib_deque.c  emblib_deque.h  emblib_list.c  emblib_list.h  emblib_queue.c  emblib_queue.h  emblib_set.c  emblib_set.h  emblib_stack.c  emblib_stack.h  emblib_thread_safety.h  emblib_util.c  emblib_util.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h  util.c  util.h
test/: CMakeLists.txt  main.c  main_test_queue.cpp
test/circ_buffer/: CMakeLists.txt  main_test_circ_buffer.cpp
test/deque/: CMakeLists.txt  main_test_deque.cpp
test/list/: CMakeLists.txt  main_test_list.cpp
test/queue/: CMakeLists.txt  main_test_queue.cpp
test/set/: CMakeLists.txt  main_test_set.cpp
test/stack/: CMakeLists.txt  main_test_stack.cpp
test/string_builder/: CMakeLists.txt  test_string_buffer.cpp
test/util/: CMakeLists.txt  main_test_util.cpp
